# badecs

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build-and-test.yaml
include/badecs/: Common.h  Filter.h  Registry.h  View.h
include/badecs/internal/: Column.h  Components.h  Entities.h  FilterList.h  ViewImpl.h
scripts/: coverage-report.sh
src/: Column.cpp  Column.h  Commands.cpp  Commands.h  Common.cpp  Common.h  ComponentManager.cpp  ComponentManager.h  ComponentRegistry.cpp  ComponentRegistry.h  ComponentStorage.cpp  ComponentStorage.h  Entity.cpp  Entity.h  EntityHandle.cpp  EntityHandle.h  EntityManager.cpp  EntityManager.h  EntityRegistry.cpp  EntityRegistry.h  Query.cpp  Query.h  System.cpp  System.h  SystemRegistry.cpp  SystemRegistry.h  View.cpp  View.h  World.cpp  World.h  main.cpp
test/: badecs_test.cpp
